fixed mobile overflow

--- a/assets/scss/components/_wrapper.scss
+++ b/assets/scss/components/_wrapper.scss
@@ -1,3 +1,4 @@
 .wrapper {
+	position: relative;
 	overflow: hidden;
 }
